@@ -1,5 +1,5 @@
 Package: pcaMethods
-Version: 1.19.0
+Version: 1.19.1
 Date: 2007-04-20
 Author: Wolfram Stacklies, Henning Redestig, Thanks to Kevin Wright for improvements to nipalsPca
 Maintainer: Wolfram Stacklies <wolfram.stacklies@gmail.com> 
