@@ -71,7 +71,7 @@ kEstimate <- function(Matrix, method = "ppca", evalPcs = 1:3, segs = 3, nruncv =
     lengthPcs <- length(evalPcs)
 
      ## If the data is a data frame, convert it into a matrix
-    Matrix <- as.matrix(Matrix)
+    Matrix <- as.matrix(Matrix, rownames.force=TRUE)
     if(maxPcs > (ncol(Matrix) - 1))
         stop("maxPcs exceeds matrix size, choose a lower value!")
 
